tests/negative/pending/parse_match_no_cases.uzpp
// XATOLIK_KUTILMOQDA: parse: moslash (switch) bo'sh
ulash "uzpp_runtime.hpp"
butun asosiy() {
    butun x = 5;
    moslash (x) {
    }
    qaytarish 0;
}
